--- a/languages/eng.ini
+++ b/languages/eng.ini
@@ -1,13 +1,35 @@
-fbSearch1="Search for Foodbanks in Area"
-fbSearch2="Find Foodbank"
-fbSearch3="Use the form below to find available foodbanks in a specific area. At least one search criterion is required."
-fbSearch4="Foodbank Name"
-fbSearch4inp="Enter the Foodbank Name"
-fbSearch5="Zip Code"
-fbSearch5inp="Enter the zip code"
-fbSearch6="Tag"
-fbSearch6inp="Enter the tag"
-fbSearch7="County"
-fbSearch7inp="Enter the county"
-fbSearch8="Search"
-fbSearch9="Return to Dashboard"
+Search_for_Foodbanks_in_Area="Search for Foodbanks in Area"
+Find_Foodbank="Find Foodbank"
+Use_the_form_below_to_find="Use the form below to find available foodbanks in a specific area. At least one search criterion is required."
+Foodbank_Name="Foodbank Name"
+Enter_Foodbank_Name="Enter the Foodbank Name"
+Zip_Code="Zip Code"
+Enter_Zip_Code="Enter the zip code"
+Tag="Tag"
+Enter_Tag="Enter the tag"
+County="County"
+Enter_County="Enter the county"
+Search="Search"
+Return_to_Dashboard="Return to Dashboard"
+View="View"
+Found_No_Results="Your search returned no results."
+Phone_Number="Phone Number"
+City="City"
+View_Foodbank="View a Food Bank"
+Food_Bank_Information="Food Bank Information"
+Alt_Phone_Number="Alternate Phone Number"
+Website_Link="Website Link"
+Address="Address"
+State="State"
+Operation_Notes="Operation Notes"
+Additional_Services="Additional Services Offered"
+Schedule="Food Bank Schedule"
+Availability="Availability"
+Sundays="Sundays"
+Mondays="Mondays"
+Tuesdays="Tuesdays"
+Wednesdays="Wednesdays"
+Thursdays="Thursdays"
+Fridays="Fridays"
+Saturdays="Saturdays"
+Frequency="Frequency"
