--- a/languages/esp.ini
+++ b/languages/esp.ini
@@ -1,13 +1,34 @@
-fbSearch1="Buscar bancos de alimentos cercanos"
-fbSearch2="Buscar bancos"
-fbSearch3="Utilice el siguiente formulario para encontrar bancos de alimentos disponibles en un área específica. Se requiere al menos un criterio de búsqueda."
-fbSearch4="Nombre del banco de alimentos"
-fbSearch4inp="ingrese el nombre del banco de alimentos"
-fbSearch5="código postal"
-fbSearch5inp="Ingrese el código postal"
-fbSearch6="Marbete"
-fbSearch6inp="Ingrese el marbete"
-fbSearch7="Condado"
-fbSearch7inp="Ingrese el condado"
-fbSearch8="Buscar"
-fbSearch9="Volver al panel"
+Search_for_Foodbanks_in_Area="Buscar bancos de alimentos cercanos"
+Find_Foodbank="Buscar bancos"
+Use_the_form_below_to_find="Utilice el siguiente formulario para encontrar bancos de alimentos disponibles en un área específica. Se requiere al menos un criterio de búsqueda."
+Foodbank_Name="Nombre del banco de alimentos"
+Enter_Foodbank_Name="ingrese el nombre del banco de alimentos"
+Zip_Code="código postal"
+Enter_Zip_Code="Ingrese el código postal"
+Tag="Marbete"
+Enter_Tag="Ingrese el marbete"
+County="Condado"
+Enter_County="Ingrese el condado"
+Search="Buscar"
+Return_to_Dashboard="Volver al panel"
+View="Ver"
+Found_No_Results="Su búsqueda no produjo resultados."
+Phone_Number="número de teléfono"
+City="Ciudad"
+View_Foodbank="Ver un banco de alimentos"
+Alt_Phone_Number="número de teléfono alternativo"
+Website_Link="Enlace de página web"
+Address="Dirección"
+State="Estado"
+Operation_Notes="Notas de operación"
+Additional_Services="Servicios adicionales ofrecidos"
+Schedule="Horario del Banco de Alimentos"
+Availability="Disponibilidad"
+Sundays="Domingos"
+Mondays="Lunes"
+Tuesdays="Martes"
+Wednesdays="Miércoles"
+Thursdays="Jueves"
+Fridays="Viernes"
+Saturdays="Sábados"
+Frequency="Frecuencia"
