--- a/languages/esp.ini
+++ b/languages/esp.ini
@@ -16,6 +16,7 @@ Found_No_Results="Su búsqueda no produjo resultados."
 Phone_Number="número de teléfono"
 City="Ciudad"
 View_Foodbank="Ver un banco de alimentos"
+Food_Bank_Information="Ver información del banco de alimentos"
 Alt_Phone_Number="número de teléfono alternativo"
 Website_Link="Enlace de página web"
 Address="Dirección"
